* added spacing file for sizedbox. * added some colors and text styles. * added font weight helper class. * added general botton and general formfield. *finished loginScereen design. *

--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -2,6 +2,7 @@ flutter_native_splash:
 #ios& android below 12 
   color: "#ffffff"
   image: assets\images\splash.png
+  
 
   android_12:
     # The image parameter sets the splash screen icon image.  If this parameter is not specified,
@@ -11,7 +12,7 @@ flutter_native_splash:
     # 640 pixels in diameter.
     # App icon without an icon background: This should be 1152×1152 pixels, and fit within a circle
     # 768 pixels in diameter.
-    #image: assets/android12splash.png
+  image: assets\images\splash.png
 
     # Splash screen background color.
     #color: "#42a5f5"
