--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,9 @@
+buildscript {
+    ext {
+        agp_version = '8.5.0'
+        agp_version1 = '8.5.1'
+    }
+}
 allprojects {
     repositories {
         google()
